--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
             <cavans id="TitleText" width="500" height="100">
                 <p style="font-weight:blod">997879OvO</p>
             </cavans>
+            <script type="text/javascript">
+var c=document.getElementById("TitleText");
+var ctx=c.getContext("2d");
+ctx.font="30px Arial";
+ctx.fillText("997879OvO",10,50);
+            </script>
         </center>
     </body>
 </html>
