--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <style>
+body {background-color:#696969}
+h1.Title {font-size:"48px";
+        font-weight:900;
+        color:#FFFFFF}
         <title>-997879OvO-</title>
     </head>
     <body>
-        <center>
-            <cavans id="TitleText" width="500" height="100">
-                <p style="font-weight:blod">997879OvO</p>
-            </cavans>
-            <script type="text/javascript">
-var c=document.getElementById("TitleText");
-var ctx=c.getContext("2d");
-ctx.font="30px Arial";
-ctx.fillText("997879OvO",10,50);
-            </script>
-        </center>
+        <hl align="center" class="Title">997879OvO</h1>
+        
     </body>
 </html>
