--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <title>997879OvO</title>
         <style>
-body {background-color:#696969}
+body {background-color: #696969}
 h1.Title {font-size:"48px";
         font-weight:900;
-        color:#FFFFFF}
+        color: #FFFF00;
+        font-famliy: Verdana}
         <title>-997879OvO-</title>
     </head>
     <body>
