--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>997879OvO</title>
         <style>
 body {background-color: #696969}
-h1.Title {font-size:"48px";
+h1.Title {font-size:48px;
         font-weight:900;
-        color: #FFFF00;
-        font-famliy: Verdana}
+        color: #FFFFFF;
+        font-famliy: Verdana, Geneva, sans-serif}
         <title>-997879OvO-</title>
     </head>
     <body>
