--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 h1.Title {font-size:48px;
     font-weight:900;
     font-famliy: Verdana, Geneva, sans-serif}
-        <title>-997879OvO-</title>
+    </style>
     </head>
     <body>
         <hl align="center" class="Title">997879OvO</h1>
